# XLeRobot-ROS2

./: .gitignore  README.md
xlerobot_bringup/: package.xml  setup.cfg  setup.py
xlerobot_bringup/config/: driver.yaml  joy_teleop.yaml  leader_follower.yaml  trajectory_macro.yaml
xlerobot_bringup/launch/: joy_teleop.launch.py  leader_follower.launch.py
xlerobot_driver/: package.xml  setup.cfg  setup.py
xlerobot_driver/test/: test_conversions.py
xlerobot_driver/xlerobot_driver/: __init__.py  calibrate.py  conversions.py  driver_node.py  mock_robot.py
xlerobot_driver/xlerobot_driver/hardware/: __init__.py
xlerobot_driver/xlerobot_driver/hardware/xlerobot/: config_xlerobot.py  xlerobot.py
xlerobot_driver/xlerobot_driver/hardware/xlerobot_2wheels/: __init__.py  config_xlerobot_2wheels.py  xlerobot_2wheels.py
xlerobot_driver/xlerobot_driver/hardware/xlerobot_mecanum/: __init__.py  config_xlerobot.py  xlerobot.py
xlerobot_teleop/: package.xml  setup.cfg  setup.py
xlerobot_teleop/test/: test_mapping.py  test_trajectory_macro.py
xlerobot_teleop/xlerobot_teleop/: __init__.py  joy_teleop_node.py  leader_follower_node.py  mapping.py  trajectory_macro.py  trajectory_macro_node.py
